fix text wrapping

--- a/WebClient/client/styles/style.styl
+++ b/WebClient/client/styles/style.styl
@@ -44,6 +44,7 @@
     box-shadow: 1px 3px 2px #5bc0de;
     position: relative;
     margin: 0 0 25px;
+    word-wrap: break-word;
     &.sender{
       margin: 0 0 0 60px;
     }
